2009-07-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs: Rename
	  on parameters/local variables are now done with link edit
	  mode instead of a dialog.

2009-07-14  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Refactoring.csproj:
	* MonoDevelop.Refactoring.addin.xml:
	* MonoDevelop.Refactoring.MoveTypeToFile:
	* MonoDevelop.Refactoring/INRefactoryASTProvider.cs:
	* MonoDevelop.Refactoring.MoveTypeToFile/TypeFilterTransformer.cs:
	* MonoDevelop.Refactoring.MoveTypeToFile/MoveTypeToFileRefactoring.cs:
	  Added move type to own file/rename file refactoring.

2009-07-13  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Refactoring.csproj:
	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodRefactoring.cs:
	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodAstTransformer.cs:
	  Worked on extract method.

2009-07-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodDialog.cs:
	* MonoDevelop.Refactoring.ExtractMethod/VariableLookupVisitor.cs:
	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodRefactoring.cs:
	  Worked on extract method.

2009-07-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.IntroduceConstant/IntroduceConstantRefactoring.cs:
	  Improved introduce constant.

2009-07-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ExtractMethod/VariableLookupVisitor.cs:
	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  Worked on refactoring.

2009-07-13  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Refactoring.csproj:
	* MonoDevelop.Refactoring.addin.xml:
	* MonoDevelop.Refactoring/RefactoryCommands.cs:
	* MonoDevelop.Refactoring.Rename/RenameHandler.cs:
	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs:
	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  Worked on refactoring/bound rename to F2.
