@@ -1,5 +1,10 @@
 2009-07-14  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Refactoring.IntroduceConstant/IntroduceConstantRefactoring.cs:
+	  Fixed bug in introduce constant refactoring.
+
+2009-07-14  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs: Rename
 	  on parameters/local variables are now done with link edit
 	  mode instead of a dialog.
